ensure active element is always visible on screen

--- a/packages/components/src/Chips/InternalChipDismissible/InternalChipDismissible.css
+++ b/packages/components/src/Chips/InternalChipDismissible/InternalChipDismissible.css
@@ -42,6 +42,7 @@
   left: 0;
   z-index: var(--elevation-menu);
   width: 100%;
+  max-height: 320px;
   box-shadow: var(--shadow-base);
   padding: var(--space-small);
   border-radius: var(--radius-base);
